# Google-Next-Mortgage-AI

./: Bank_statement_OCR_Labels.csv  PAYG Policy Checks - Sheet2.csv  PAYG Policy Checks.xlsx  Payslip_OCR_Labels.csv  README.md  Standard Income Policy Checks - Sheet2.csv  app.py  cookies.txt  gcp_config.py  payg_policy_config.json  payslip_ocr_schema.csv  payslip_ocr_schema.json  pyproject.toml  requirements.txt  standard_income_policy_config.json
services/: auth_service.py  document_processor.py  firestore_service.py  gemini_service.py  pdf_service.py  validation_engine.py
templates/: assessor_dashboard.html  assessor_view.html  base.html  broker_dashboard.html  login.html  new_application.html  processing.html  review_application.html  upload_documents.html
